@@ -6,21 +6,52 @@ Launcher="@sub_PREFIX@/bin/tdbscan-launcher"
 ClustersDiff="@sub_PREFIX@/bin/ClustersDiff"
 ClustersSequenceScore="@sub_PREFIX@/bin/ClustersSequenceScore"
 
+ExperimentTag="_experiment_"
 OutputPrefix=""
 OutputSuffix="_sweep_results.csv"
 
-if ((len(sys.argv) < 6) or (len(sys.argv) > 7)):
-  print "Usage: $0 <min-backends> <max-backends> <xml> <input-trace> <output-prefix> [reference-trace]"
+LOCAL_HULLS         = 'Hulls'
+GLOBAL_HULLS        = 'Sum hulls'
+CLUSTERING_POINTS   = 'Clustering points'
+NOISE_POINTS        = 'Noise'
+EXTRACTION_TIME     = 'Extraction time'
+CLUSTERING_TIME     = 'Clustering time'
+MERGE_TIME          = 'Merge time'
+CLASSIFICATION_TIME = 'Classification time'
+RECONSTRUCT_TIME    = 'Reconstruct time'
+TOTAL_TIME          = 'Total time'
+
+def GetValue(AllStats, WhichStat):
+  stats_array = AllStats.replace('\\n', ',').split(',')
+  for stat in stats_array:
+    if (stat[0:len(WhichStat)] == WhichStat):
+      return float(stat.split('=')[1])
+  return float(0)
+
+AvgClusteringPoints = 0
+AvgNoisePoints = 0
+AvgExtractionTime = 0
+AvgClusteringTime = 0
+AvgMergeTime = 0
+AvgClassificationTime = 0
+AvgReconstructTime = 0
+AvgTotalTime = 0
+AvgLocalHulls = 0
+
+
+if ((len(sys.argv) < 7) or (len(sys.argv) > 8)):
+  print "Usage: $0 <iterations> <min-backends> <max-backends> <xml> <input-trace> <output-prefix> [reference-trace]"
   sys.exit(-1)
 
-MinBackends   = int(sys.argv[1])
-MaxBackends   = int(sys.argv[2])
-ClusteringXML = sys.argv[3]
-InputTrace    = sys.argv[4]
-OutputPrefix  = sys.argv[5]
-if (len(sys.argv) == 7):
+NumIters      = int(sys.argv[1])
+MinBackends   = int(sys.argv[2])
+MaxBackends   = int(sys.argv[3])
+ClusteringXML = sys.argv[4]
+InputTrace    = sys.argv[5]
+OutputPrefix  = sys.argv[6]
+if (len(sys.argv) == 8):
   HaveReference = True
-  ReferenceTrace = sys.argv[6]
+  ReferenceTrace = sys.argv[7]
   ReferenceCSV = ReferenceTrace[0:-4] + ".DATA.csv"
 else:
   HaveReference = False
@@ -57,52 +88,95 @@ while (NumBackends >= MinBackends):
     TopologySpec = "g:" + TopologySpec[0:-1]
     print "NumBackends: ", NumBackends, "FanIn: ", FanIn, "TopologySpec: ", TopologySpec
 
-    # Launch TDBSCAN
-    cmd = Launcher + " " + TopologySpec + " " + ClusteringInput + " -o " + OutputPrefix + "_output_" + str(ExperimentNo) + ".prv"
-    print "Running: " + cmd
-
-    output = ""
-    try:
-      output = subprocess.check_output( cmd.split(' ') , stderr=subprocess.STDOUT)
-      print output
-    except subprocess.CalledProcessError as error:
-      print "Error!"
-      print error
-      sys.exit(-1)
-
-    performance_output = [line for line in output.split('\n') if "[CSV]" in line]
-    performance_output = performance_output[0][6:]
-
-    # Check Mirkin Distance and Sequence Score
-    if (HaveReference):
-      ReferenceCSVSorted = ReferenceCSV + ".sorted.csv"
-      FinalCSV = OutputPrefix + "_output_" + str(ExperimentNo) + ".FINAL.DATA.csv"
-      FinalCSVSorted = FinalCSV + ".sorted.csv"
-     
-      os.system( "sort -t, -h -k5 " + ReferenceCSV + " > " + ReferenceCSVSorted )
-      os.system( "sort -t, -h -k5 " + FinalCSV + " > " + FinalCSVSorted )
- 
-      cmd = ClustersDiff + " -1 " + FinalCSVSorted + " -2 " + ReferenceCSVSorted
+    for i in range(1, NumIters+1):
+      # Launch TDBSCAN
+      cmd = Launcher + " " + TopologySpec + " " + ClusteringInput + " -o " + OutputPrefix + ExperimentTag + str(ExperimentNo) + ".prv"
       print "Running: " + cmd
-      output = subprocess.check_output(cmd, shell=True)
-      MirkinDistance = float(output)
-    else:
-      MirkinDistance = 0
 
-    cmd = ClustersSequenceScore + " output_" + str(ExperimentNo) + ".FINAL.DATA.csv"
-    try:
-      output = subprocess.check_output(cmd, shell=True)
-      SequenceScore = float(output)
-    except:
-      SequenceScore = 0
+      output = ""
+      try:
+        output = subprocess.check_output( cmd.split(' ') )
+        print output
+      except subprocess.CalledProcessError as error:
+        print "Error!"
+        print error
+        sys.exit(-1)
 
-    performance_output = str(ExperimentNo) + ", " + str(NumTasks) + ", " + str(FanIn) + ", " + performance_output + ", " + str(MirkinDistance) + ", " + str(SequenceScore)
-    print performance_output
-    fd.write( performance_output + "\n" )
+      # Check Mirkin Distance and Sequence Score
+      if (HaveReference):
+        ReferenceCSVSorted = ReferenceCSV + ".sorted.csv"
+        FinalCSV = OutputPrefix + ExperimentTag + str(ExperimentNo) + ".FINAL.DATA.csv"
+        FinalCSVSorted = FinalCSV + ".sorted.csv"
+     
+        os.system( "sort -t, -h -k5 " + ReferenceCSV + " > " + ReferenceCSVSorted )
+        os.system( "sort -t, -h -k5 " + FinalCSV + " > " + FinalCSVSorted )
+ 
+        cmd = ClustersDiff + " -1 " + FinalCSVSorted + " -2 " + ReferenceCSVSorted
+        print "Running: " + cmd
+        output = subprocess.check_output(cmd, shell=True)
+        MirkinDistance = float(output)
+      else:
+        MirkinDistance = 0
 
-    ExperimentNo=ExperimentNo + 1
+      cmd = ClustersSequenceScore + " " + OutputPrefix + ExperimentTag + str(ExperimentNo) + ".FINAL.DATA.csv"
+      print "Running: " + cmd
+      try:
+        output = subprocess.check_output(cmd, shell=True)
+        SequenceScore = float(output)
+      except:
+        SequenceScore = 0
+
+      StatisticsDataFile = OutputPrefix + ExperimentTag + str(ExperimentNo) + ".MRNETSTATS.data"
+      stats_fd = open(StatisticsDataFile, 'r')
+      for i in range(0, NumBackends):
+        CurrentBackendStats = stats_fd.readline()
+        AvgClusteringPoints += GetValue(CurrentBackendStats, CLUSTERING_POINTS)
+        AvgNoisePoints += GetValue(CurrentBackendStats, NOISE_POINTS)
+        AvgExtractionTime += GetValue(CurrentBackendStats, EXTRACTION_TIME)
+        AvgClusteringTime += GetValue(CurrentBackendStats, CLUSTERING_TIME)
+        AvgMergeTime += GetValue(CurrentBackendStats, MERGE_TIME)
+        AvgClassificationTime += GetValue(CurrentBackendStats, CLASSIFICATION_TIME)
+        AvgReconstructTime += GetValue(CurrentBackendStats, RECONSTRUCT_TIME)
+        AvgTotalTime += GetValue(CurrentBackendStats, TOTAL_TIME)
+        AvgLocalHulls += GetValue(CurrentBackendStats, LOCAL_HULLS)
+
+      AvgClusteringPoints /= NumBackends
+      AvgClusteringPoints = int(AvgClusteringPoints)
+      AvgNoisePoints /= NumBackends
+      AvgNoisePoints = int(AvgNoisePoints)
+      AvgExtractionTime /= NumBackends
+      AvgClusteringTime /= NumBackends
+      AvgMergeTime /= NumBackends
+      AvgClassificationTime /= NumBackends
+      AvgReconstructTime /= NumBackends
+      AvgTotalTime /= NumBackends
+      AvgLocalHulls /= NumBackends
+      AvgLocalHulls = int(AvgLocalHulls)
+ 
+
+      ClustersInfoFile = OutputPrefix + ExperimentTag + str(ExperimentNo) + ".FINAL.clusters_info.csv" 
+      clusters_info_fd = open(ClustersInfoFile, 'r')
+      clusters_names = clusters_info_fd.readline()
+      GlobalHulls = len(clusters_names.split(',')) - 2 
+
+      fd.write(str(ExperimentNo) + ", " +
+               str(NumTasks) + ", " + 
+               str(FanIn) + ", " +
+               str(NumBackends) + ", " + 
+               str(AvgClusteringPoints) + ", " + 
+               str(AvgLocalHulls) + ", " + 
+               str(GlobalHulls) + ", " + 
+               str(AvgExtractionTime) + ", " + 
+               str(AvgClusteringTime) + ", " + 
+               str(AvgMergeTime) + ", " + 
+               str(AvgClassificationTime) + ", " + 
+               str(AvgReconstructTime) + ", " + 
+               str(AvgTotalTime) + ", " + 
+               str(MirkinDistance) + ", " +
+               str(SequenceScore) + "\n")
+
+      ExperimentNo=ExperimentNo + 1
     FanIn=FanIn/2
-
   NumBackends=NumBackends/2
 
 fd.close()
